--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>BangaClient</title>
     <link rel="stylesheet" type="text/css" href="lib/node_modules/bootstrap/dist/css/bootstrap.min.css">
 </head>
-<body>
+<body ng-app="BangaClient">
     <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -24,16 +24,15 @@
             </form>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="index.php">LINK</a></li>
-                    <li><a href="about.php">LINK</a></li>
-                    <li><a href="#portfolio">LINK</a></li>
                     <li><a href="#">LINK</a></li>
-                    <li><a href="contact.php">LINK</a></li>
+                    <li><a href="#">LINK</a></li>
+                    <li><a href="#">LINK</a></li>
+                    <li><a href="#">LINK</a></li>
+                    <li><a href="#">Login</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <h1>Hello</h1>
     <div ng-view>
     
     <!-- Insert Partials --> 
@@ -45,8 +44,8 @@
     <script type="text/javascript" src="lib/node_modules/angular-route/angular-route.min.js"></script>
 
     <script type="text/javascript" src="app/app.js"></script>
-
-    <!-- <script type="text/javascript" src="app/factories/*"></script> -->
+    
+    <script src="/lib/node_modules/cookies/js.cookies.js"></script>
     <script type="text/javascript" src="app/controllers/controller.login.js"></script>
     <script type="text/javascript" src="app/controllers/controller.product_types.js"></script>
     <script type="text/javascript" src="app/controllers/controller.products.js"></script>
