product and product_type views work

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             </form>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">LINK</a></li>
-                    <li><a href="#">LINK</a></li>
-                    <li><a href="#">LINK</a></li>
-                    <li><a href="#">LINK</a></li>
-                    <li><a href="#">Login</a></li>
+                    <li><a href="#!/products">Products</a></li>
+                    <li><a href="#!/product_types">Product Types</a></li>
+                    <li><a href="#">Sell a Product</a></li>
+                    <li><a href="#">Shopping Cart</a></li>
+                    <li><a href="#!/">Login</a></li>
                 </ul>
             </div>
         </div>
