--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li><a href="#!/products">Products</a></li>
                     <li><a href="#!/product_types">Product Types</a></li>
                     <li><a href="#">Sell a Product</a></li>
-                    <li><a href="#">Shopping Cart</a></li>
+                    <li><a href="#">Shopping Cart<span class="badge" style="margin-left: 2px">5</span></a></li>
                     <li><a href="#!/">Login</a></li>
                 </ul>
             </div>
@@ -49,5 +49,6 @@
     <script type="text/javascript" src="app/controllers/controller.login.js"></script>
     <script type="text/javascript" src="app/controllers/controller.product_types.js"></script>
     <script type="text/javascript" src="app/controllers/controller.products.js"></script>
+    <script type="text/javascript" src="app/controllers/controller.product_detail.js"></script>
 </body>
 </html>
