--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="lib/node_modules/bootstrap/dist/css/bootstrap.min.css">
 </head>
 <body ng-app="BangaClient">
-    <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+    <nav class="navbar navbar-inverse navbar-static-top" role="navigation" ng-controller="NavbarController">
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -18,9 +18,9 @@
             </div>
             <form class="navbar-form navbar-left">
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Search">
+                    <input id="searchboxInput" type="text" class="form-control" placeholder="Search">
                 </div>
-                <button type="submit" class="btn btn-default">Submit</button>
+                <button type="submit" class="btn btn-default" ng-click="getSearchValue()">Submit</button>
             </form>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
@@ -50,5 +50,6 @@
     <script type="text/javascript" src="app/controllers/controller.product_types.js"></script>
     <script type="text/javascript" src="app/controllers/controller.products.js"></script>
     <script type="text/javascript" src="app/controllers/controller.product_detail.js"></script>
+    <script type="text/javascript" src="app/controllers/controller.navbar.js"></script>
 </body>
 </html>
